chore: update openapi contract to 1.0.2
